unpackaged/main/default/objects/EventApi__Section__c/EventApi__Section__c.object-meta.xml
<CustomObject>
    <description>Section for the related event.</description>
    <label>Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>