unpackaged/main/default/objects/EventApi__Section__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <description>Rich Text used for providing a unique description for the related section.</description>
    <inlineHelpText>Rich Text used for providing a unique description for the related section.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>