unpackaged/main/default/objects/EventApi__Section__c/fields/EventApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Order__c</fullName>
    <description>**Required** The display order for sections.</description>
    <inlineHelpText>**Required** The display order for sections.</inlineHelpText>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>