unpackaged/main/default/objects/EventApi__Section__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>**Required** Linked to the related event.</description>
    <inlineHelpText>**Required** Linked to the related event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>