unpackaged/main/default/objects/EventApi__Section__c/fields/EventApi__Image__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Image__c</fullName>
    <description>The image used when viewing the related section in an event&#39;s registration. The provided image will also be cropped to fit a 200x200 pixel thumbnail.</description>
    <inlineHelpText>The image used when viewing the related section in an event&#39;s registration. The provided image will also be cropped to fit a 200x200 pixel thumbnail.</inlineHelpText>
    <label>Image</label>
    <type>Url</type>
</CustomField>